--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="row align-items-center">
         <div class="col">
-          <h6 class="text-tr" style="padding: 0px 0px 0px 15px;" id="inputLabel">Cartinese</h6>
+          <h6 class="text-tr" style="padding: 0px 0px 0px 15px;" id="inputLabel">English</h6>
         </div>
         <div class="col-auto swap" id="swap">
           <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
@@ -28,7 +28,7 @@
           </svg>
         </div>
         <div class="col">
-          <h6 class="text-tr" id="outputLabel">English</h6>
+          <h6 class="text-tr" id="outputLabel">Cartinese</h6>
         </div>
       </div>
       <div class="row">
